Fix textfield alignment in IE8.

--- a/stylesheets/flame.css.scss
+++ b/stylesheets/flame.css.scss
@@ -655,9 +655,13 @@ input[type="password"] {
     padding-right: 6px;
     padding-bottom: 2px;
 
+    & > input {
+        line-height: 21px\9;
+    }
+
     & > input[disabled="disabled"] {
-      color: #777;
-      background-color: #ddd;
+        color: #777;
+        background-color: #ddd;
     }
 
     & > textarea {
